...
          rightNode={
            <View flexDirection="row" alignItems="center" gap="$4">
              {nonce.isRebuilding ? (
                <Loader size={16} color="$color" />
              ) : (
                <>
                  <Text fontSize="$4" lineHeight={20} color="$color" testID="nonce-row-value">
                    {nonce.draftNonce}
                  </Text>
                  <SafeFontIcon name="chevron-right" />
                </>
              )}
            </View>
          }
          onPress={canEdit ? nonce.handleOpenNonceSheet : undefined}
          testID="nonce-row"
        />
      </View>

      <NonceBottomSheet
        ref={nonce.nonceSheetRef}
        recommendedNonce={nonce.recommendedNonce}
...
