...
}: {
  nonce: number
  isSelected: boolean
  onPress: () => void
}) {
  return (
    <Pressable onPress={onPress} testID="nonce-recommended">
      <View
        flexDirection="row"
        alignItems="center"
        paddingVertical="$1"
        paddingHorizontal="$3"
        borderRadius={8}
...
          backgroundColor="$backgroundSheet"
          paddingTop="$2"
          paddingBottom={insets.bottom + 8}
          marginBottom={-insets.bottom}
        >
          <View height={1} backgroundColor="$borderLight" marginBottom="$2" />
          <Pressable onPress={onAddCustomNonce} testID="nonce-add-custom">
            <View
              flexDirection="row"
              alignItems="center"
              marginHorizontal="$4"
              paddingVertical="$1"
              paddingHorizontal="$3"
...
