...
    <Tabs screenOptions={screenOptions}>
      <Tabs.Screen
        name="index"
        options={{
          header: () => <AssetsNavbar />,
          title: 'Home',
          tabBarButtonTestID: 'home-tab',
          tabBarButton: ({ children, ref, ...rest }) => {
            return (
              <Pressable {...rest} style={styles.tabButton}>
                {children}
              </Pressable>
            )
...

      <Tabs.Screen
        name="settings"
        options={{
          title: 'Account',
          headerShown: false,
          tabBarButtonTestID: 'account-tab',
          tabBarButton: ({ children, ref, ...rest }) => {
            return (
              <Pressable {...rest} style={styles.tabButton}>
                {children}
              </Pressable>
            )
...
