...
          justifyContent: 'flex-end',
          gap: 10,
          zIndex: 1,
        }}
      >
        <Pressable
          testID={'settings-screen-header-app-settings-button'}
          hitSlop={6}
          onPressIn={() => {
            try {
              const event = createAppSettingsOpenEvent()
              trackEvent(event)
            } catch (error) {
...
